--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Federico_Bernardi">
     <meta name="description" content="Wordpress">
+    <link rel="stylesheet" href="css/style.css">
     <title>Wordpress</title>
 </head>
-<body>
-    <header></header>
+<body class="container">
+    <header>
+        <img src="img/logo.png" alt="Neori">
+        <ul>
+            <li><a href="#">FEATURES</a></li>
+            <li><a href="#">EDITORIAL</a></li>
+            <li><a href="#">ENVIRONMENT</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">SHOP</a></li>
+            <li><a href="#">CONTACT</a></li>
+        </ul>
+    </header>
     <main></main>
     <footer></footer>
 </body>
