--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
             <li><a href="#">CONTACT</a></li>
         </ul>
     </header>
-    <main></main>
+    <main>
+        <section id="spotlight">
+            <div class="spot-description">
+                <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, blanditiis magni consequatur nobis iusto quod temporibus.</h4>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
