--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
         <section id="spotlight">
             <div class="spot-description">
                 <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, blanditiis magni consequatur nobis iusto quod temporibus.</h4>
+                <h4 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, blanditiis magni consequatur nobis iusto quod temporibus.</h4>
             </div>
+        </section>
+
+        <section id="skills">
+            <div>
+                <h2>Leadership</h2>
+                <h5 class="subtitle">Fertenum urna a libero tempus</h5>
+            </div>
+            
         </section>
     </main>
     <footer></footer>
