--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
         </section>
 
         <section id="skills">
-            <div>
+            <div class="skills-title">
                 <h2>Leadership</h2>
                 <h5 class="subtitle">Fertenum urna a libero tempus</h5>
             </div>
-            
+            <div id="grid">
+                <div class="col col-side"></div>
+                <div class="col col-center"></div>
+                <div class="col col-side"></div>
+            </div>
         </section>
     </main>
     <footer></footer>
