struggle with grid

--- a/index.html
+++ b/index.html
@@ -30,15 +30,30 @@
         </section>
 
         <section id="skills">
-            <div class="skills-title">
+            <header class="skills-title">
                 <h2>Leadership</h2>
                 <h5 class="subtitle">Fertenum urna a libero tempus</h5>
-            </div>
-            <div id="grid">
-                <div class="col col-side"></div>
-                <div class="col col-center"></div>
-                <div class="col col-side"></div>
-            </div>
+            </header>
+            <row id="grid">
+                <div class="col col-side">
+                    <div class="image first side"></div>
+                    <h5>Lorem</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
+                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                </div>
+                <div class="col col-center">
+                    <div class="image center"></div>
+                    <h5>Lorem</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
+                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                </div>
+                <div class="col col-side">
+                    <div class="image last side"></div>
+                    <h5>Lorem</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
+                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                </div>
+            </row>
         </section>
     </main>
     <footer></footer>
