--- a/index.html
+++ b/index.html
@@ -34,28 +34,27 @@
                 <h2>Leadership</h2>
                 <h5 class="subtitle">Fertenum urna a libero tempus</h5>
             </header>
-            <row id="grid">
+            <div id="grid" class="clearfix">
                 <div class="col col-side">
                     <div class="image first side"></div>
                     <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
-                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est</p>
                 </div>
                 <div class="col col-center">
                     <div class="image center"></div>
                     <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
-                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatum voluptatibus fuga dolorem quae error laudantium alias minus rerum sit earum, eligendi culpa incidunt sunt assumenda natus necessitatibus? Dolore, explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
+                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque perspiciatis quas, neque quia obcaecati accusantium laudantium suscipit cum enim ab voluptate eligendi excepturi maxime, quisquam eos ullam incidunt earum non!</p>
                 </div>
                 <div class="col col-side">
                     <div class="image last side"></div>
                     <h5>Lorem</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem. Ipsum laboriosam qui velit!
-                    Eos minima ullam quis ut eligendi dolores modi, esse aperiam perferendis quaerat aliquid laudantium voluptates nam ipsam. Tenetur non incidunt corporis necessitatibus expedita quas, possimus a accusamus similique soluta. Quo.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae autem ratione obcaecati, saepe, iusto molestias aliquam ipsum nulla est, cum corrupti voluptatibus distinctio vitae dolorem.</p>
                 </div>
-            </row>
+            </div>
         </section>
     </main>
-    <footer></footer>
+
+    <footer>Designed with <span>&hearts;</span></footer>
 </body>
 </html>
